--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -811,7 +811,6 @@
   box-shadow: 0px 15px 60px var(--yellow-1);
   outline: 1px solid var(--yellow-1);
   border-radius: 10px;
-  
 }
 
 .section-heading {
@@ -829,11 +828,12 @@
   color: var(--yellow-1);
   margin-bottom: 5px;
   text-align: left;
+  width: 100%; 
 }
 
 .contact-form-input,
 .contact-form-textarea {
-  width: 100%;
+  width: 100%; 
   background: transparent;
   font-size: 14px;
   color: var(--yellow-1);
@@ -844,6 +844,7 @@
   border-radius: 6px;
   transition: all 0.3s ease;
   margin-bottom: 30px;
+  text-align: left; 
 }
 
 .contact-form-input::placeholder,
